src/objects/GDP_Products_Account_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>GDP Products - Accounts Snapshot</relationshipLabel>
        <relationshipName>GDP_Products_Accounts_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <label>Agency Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Digit__c</fullName>
        <label>Check Digit</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalId>true</externalId>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <label>IATA Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <externalId>true</externalId>
        <label>Legal Name</label>
        <length>98</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type_Name__c</fullName>
        <externalId>true</externalId>
        <label>Location Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accreditation_Class_Code__c</fullName>
        <label>Related Accreditation Class Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accreditation_Class_Table__c</fullName>
        <label>Related Accreditation Class Table</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Code__c</fullName>
        <externalId>true</externalId>
        <label>State/Province Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Continent__c</fullName>
        <externalId>true</externalId>
        <label>Sub Continent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <externalId>true</externalId>
        <label>Trading Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>GDP Products - Account Snapshot</label>
    <nameField>
        <label>Trading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDP Products - Accounts Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>